# tsubu-cloud-examples

docs/: deploy.md
mbt-hello-world/: README.md  moon.mod.json  result  tsubu.json
mbt-hello-world/interface/tsubu_cloud/handler/types/: top.mbt
mbt-hello-world/wit/: guest.wit
mbt-http/: README.md  moon.mod.json  tsubu.json
mbt-http/_build/.ide/: packages.json
mbt-http/_build/.ide/wasm/debug/check/: all_pkgs.json  check.moon_db
mbt-http/_build/.ide/wasm/debug/check/interface/mbt_http/handler/types/: types.ast  types.blackbox_test.ast  types.blackbox_test.mi  types.blackbox_test.typechecked  types.mi  (+1 more)
mbt-http/_build/.ide/wasm/debug/check/world/guest/: guest.ast  guest.blackbox_test.ast  guest.blackbox_test.mi  guest.blackbox_test.typechecked  guest.mi  guest.typechecked
mbt-http/docs/: deploy.md
mbt-http/interface/tsubu_cloud/fetcher/fetcher/: ffi.mbt  moon.pkg.json  top.mbt
mbt-http/interface/tsubu_cloud/fetcher/types/: top.mbt
mbt-http/interface/tsubu_cloud/logger/logger/: ffi.mbt  top.mbt
mbt-http/wit/: guest.wit
mbt-postgres/: README.md  flake.nix  moon.mod.json  tsubu.json
mbt-postgres/interface/tsubu_cloud/logger/logger/: ffi.mbt
mbt-postgres/interface/tsubu_cloud/postgres/postgres/: ffi.mbt  moon.pkg.json  top.mbt
mbt-postgres/interface/tsubu_cloud/postgres/types/: top.mbt
mbt-postgres/wit/: guest.wit
rust-postgres/: Cargo.toml  README.md  flake.nix
rust-postgres/db/: schema.sql
rust-postgres/migrations/: 20260708162403_create_users.sql
rust-postgres/src/: guest.rs  handlers.rs  lib.rs  models.rs
scripts/: deploy.sh
(+11 files in other folders)
